--- a/amp/about.html
+++ b/amp/about.html
@@ -439,6 +439,27 @@ amp-accordion.hidden-header section[expanded] h4 {
     right: 20px;
     top: 15px;
 }
+
+#header-sidebar nav ul .drop-list {
+    margin-top: 5px;
+}
+#header-sidebar nav ul li.drop-list {
+    padding: 10px 24px 10px 20px;
+} 
+.start-drop>section>header:after {
+    display: inline-block;
+    content: "+";
+    padding: 0 0 0 1.5rem;
+    color: #003f93;
+}
+.start-drop>[expanded]>header:after {
+    content: "–";
+}
+.drop-head {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    outline: none;
+}
     
 .scrollToTop { color: #fff; font-size: 1.8em; box-shadow: 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 1px -1px rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12); width: 50px; height: 50px; border-radius: 15%; border: none; outline: none; background: #fca509; z-index: 999; bottom: 10px; right: 25px; position: fixed; opacity: 0; visibility: hidden; }
 
@@ -522,70 +543,87 @@ header.masthead h1{font-size:2.4rem;}
     </script>
   </amp-animation>    
     
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 bg-white shadow" id="mainNav">
-          <div class="container">
-          <a class="navbar-brand " href="./index.html"><amp-img src="../assets/pragyanam-logo.png" alt="Pragyanam Logo"  layout="fixed" width="200px" height="55"></amp-img></a>
-          <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button> -->
-          <button class="navbar-toggler ampstart-navbar-trigger d-none" role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about.html">About Us</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown03">
-                  <a class="dropdown-item" href="./curriculum.html">Our Curriculum</a>
-                  <a class="dropdown-item" href="./affiliation.html">CBSE</a>
-                  <a class="dropdown-item" href="./assessment.html">Assessment</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown03">
-                  <a class="dropdown-item" href="./facilities.html">Facilities</a>
-                  <a class="dropdown-item" href="./nutrition.html">Nutrition</a>
-                  <a class="dropdown-item" href="./infirmary.html">Infirmary</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./admission.html">Admission</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./careers.html">Careers</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        </nav>
+     <!-- Navigation-->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 bg-white shadow" id="mainNav">
+      <div class="container">
+      <a class="navbar-brand " href="./index.html"><amp-img src="../assets/pragyanam-logo.png" alt="Pragyanam Logo"  layout="fixed" width="200px" height="55"></amp-img></a>
+      <button class="navbar-toggler ampstart-navbar-trigger d-none" role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About Us</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="./curriculum.html">Our Curriculum</a>
+              <a class="dropdown-item" href="./affiliation.html">Affiliation</a>
+              <a class="dropdown-item" href="./assessment.html">Assessment</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="./facilities.html">Facilities</a>
+              <a class="dropdown-item" href="./nutrition.html">Nutrition</a>
+              <a class="dropdown-item" href="./infirmary.html">Infirmary</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./admission.html">Admission</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./careers.html">Careers</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
 
-      <!-- Start Sidebar -->
-      <amp-sidebar id="header-sidebar" class="ampstart-sidebar bg-white" layout="nodisplay">
-        <div class="flex justify-start items-center ampstart-sidebar-header closeslide">
-          <div role="button" aria-label="close sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger items-start">✕</div>
-        </div>
-        <nav class="ampstart-sidebar-nav ampstart-nav">
-          <ul class="list-reset m0 p0 ampstart-label">
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./index.html">Home</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./about.html">About Us</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./curriculum.html">Our Curriculum</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./affiliation.html">CBSE</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./assessment.html">Assessment</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./facilities.html">Facilities</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./nutrition.html">Nutrition</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./infirmary.html">Infirmary</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./admission.html">Admission</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./careers.html">Careers</a></li>
-          </ul>
-        </nav>
-      </amp-sidebar>
-      <!-- End Sidebar -->
+  <!-- Start Sidebar -->
+  <amp-sidebar id="header-sidebar" class="ampstart-sidebar bg-white" layout="nodisplay">
+    <div class="flex justify-start items-center ampstart-sidebar-header closeslide">
+      <div role="button" aria-label="close sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger items-start">✕</div>
+    </div>
+    <nav class="ampstart-sidebar-nav ampstart-nav">
+      <ul class="list-reset m0 p0 ampstart-label">
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./index.html">Home</a></li>
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./about.html">About Us</a></li>
+            <li class="ampstart-nav-item">
+              <!-- Start Dropdown-inline -->
+              <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown start-drop">
+                <section>
+                  <header class="drop-head">Our Curriculum</header>
+                  <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
+                      <li class="ampstart-dropdown-item"><a href="./curriculum.html" class="text-decoration-none">Curriculum</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./affiliation.html" class="text-decoration-none">Affiliation</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./assessment.html" class="text-decoration-none">Assessment</a></li>
+                  </ul>
+                </section>
+              </amp-accordion>
+            </li>
+            <li class="ampstart-nav-item">
+              <!-- Start Dropdown-inline -->
+              <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown start-drop">
+                <section>
+                  <header class="drop-head">Facilities</header>
+                  <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
+                      <li class="ampstart-dropdown-item"><a href="./facilities.html" class="text-decoration-none">Facilities</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./nutrition.html" class="text-decoration-none">Nutrition</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./infirmary.html" class="text-decoration-none">Infirmary</a></li>
+                  </ul>
+                </section>
+              </amp-accordion>
+            </li>
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./admission.html">Admission</a></li>
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./careers.html">Careers</a></li>
+      </ul>
+    </nav>
+  </amp-sidebar>
+  <!-- End Sidebar -->
 
         <!-- Masthead-->
            <header class="masthead all-cover">
