--- a/amp/careers.html
+++ b/amp/careers.html
@@ -462,6 +462,26 @@ amp-accordion.hidden-header section[expanded] h4 {
     outline: none;
 }
 
+#header-sidebar nav ul .drop-list {
+    margin-top: 5px;
+}
+#header-sidebar nav ul li.drop-list {
+    padding: 10px 24px 10px 20px;
+} 
+.start-drop>section>header:after {
+    display: inline-block;
+    content: "+";
+    padding: 0 0 0 1.5rem;
+    color: #003f93;
+}
+.start-drop>[expanded]>header:after {
+    content: "–";
+}
+.drop-head {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    outline: none;
+}
 
 .scrollToTop { color: #fff; font-size: 1.8em; box-shadow: 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 1px -1px rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12); width: 50px; height: 50px; border-radius: 15%; border: none; outline: none; background: #fca509; z-index: 999; bottom: 10px; right: 25px; position: fixed; opacity: 0; visibility: hidden; }
 
